# barter-rs

./: .gitignore  Cargo.toml
barter/: Cargo.toml
barter-data/src/: event.rs  lib.rs
barter-data/src/exchange/binance/: binance_ticker.rs  candle.rs  channel.rs  mod.rs  trade.rs
barter-data/src/exchange/bitfinex/: trade.rs
barter-data/src/exchange/bitmex/: trade.rs
barter-data/src/exchange/bybit/: trade.rs
barter-data/src/subscriber/: mod.rs
barter-data/src/subscription/: candle.rs  candle_1h.rs  candle_1m.rs  mark_price.rs  mod.rs  ticker.rs  trade.rs
barter/src/: logging.rs
miraelis/: Cargo.toml  ROCKET_STRATEGY.md  config.json  rocket_config_example.json
miraelis/data/: binance_futures_exchange_info.json
miraelis/src/: config.rs  execution.rs  main.rs
miraelis/src/quotation/: config.rs  future_quotation.rs  mod.rs  rate_limiter.rs  trade_window.rs  writer.rs
miraelis/src/signal/: mod.rs
miraelis/src/strategy/: frame.rs  huge_momentum.rs  mod.rs  rocket.rs
miraelis/tests/data/: basedusdt_1h.candle  basedusdt_1m.candle  huge_momentum_1h.json  huge_momentum_1m.json
risk/: app.rs  config.json  config.rs  main.rs  market_stream.rs  state.rs  supervisor.rs  user_data_stream.rs
risk/binance/: account.rs  credentials.rs  mod.rs  model.rs  position_risk.rs  rest_client.rs
scripts/: download_binance_kline.py  huge_kline_analyzer.md  huge_kline_analyzer.py  liquidations_stat.py  trade_stats.py  trade_stats_v2.py  trade_stats_v3.py
strategy/: app.rs  binance.rs  command.rs  config.json  config.rs  main.rs  telegram.rs
(+8 files in other folders)
